# auto-data-linkage

./: .buildinfo  .scalafmt.conf  01_Download_Dataset.py  01_Run_Example_Deduplication.py  01_Run_Example_Linking.py  02_Analysis.py  02_Run_Example_Linking.py  LICENSE  README.md  RUNME.py  Run_Example_Linking.py  genindex.html  index.html  objects.inv  search.html  searchindex.js  tests.py
.github/: dependabot.yml
Workshop Materials/: README.md
_sources/: index.rst.txt
datasets/: febrl1.csv
docs/: docs-requirements.txt
example-notebooks/: 01_Run_Example_Deduplication.py  02_Run_Example_Linking.py
integration-tests/: RUN_TESTS.py  deduplication_test.py  linking_test.py
notebooks/: Splink Evaluation - explanation.py  Splink in Databricks - Exercise.py  Splink in Databricks - end-to-end example.py
python/: MANIFEST.in  README.md  setup.cfg
python/arc/: __init__.py  auto_attach.py
python/arc/autolinker/: __init__.py  arc_comparison_library.py  autolinker.py  cleaning.py  cleaning_utils.py  splink_mlflow.py
python/arc/data/: __init__.py  load_test.py
python/arc/notebooks/: example.py
python/arc/sql/: __init__.py  auto_attach.py  enable_arc.py
python/arc/sql/functions/: __init__.py  functions.py  library_handler.py
python/arc/utils/: utils.py
python/test/: arc_sql_test.py  arc_test.py  dummy_test.py  test_arc_sql.py  test_cleaning.py
python/test/utils/: __init__.py  arc_test.py  spark_test_case.py
scala/: pom.xml
setup/: config.share  data-setup.py  delta-receive.py
tests/: tests.py
usage/: best_practices.html  installation.html  (+2 more)
(+76 files in other folders)
