[metadata]
name = databricks-arc
author = Databricks
version = attr: arc.__version__
description = ARC: data linking solution for Databricks with Splink
url = https://github.com/databricks-industry-solutions/splink-public-sector-hackathon
long_description = file: README.md
long_description_content_type = text/markdown
license = Databricks License
classifiers =
    License :: Other/Proprietary License
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7.0
install_requires =
    ipython==7.22.0
include_package_data = True

[options.package_data]
arc =
    lib/*.jar
    resources/*.png

[options.extras_require]
dev =
    isort
    black
    build

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
known_first_party=arc
default_section=THIRDPARTY

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 20
select = B,C,E,F,W,T4
exclude = .git,__pycache__,docs/conf.py,dist

[mypy]
files=arc
ignore_missing_imports=true
